--- a/references.bib
+++ b/references.bib
@@ -19,6 +19,23 @@ url = {http://link.springer.com/10.1007/s00249-012-0813-9},
 volume = {42},
 year = {2013}
 }
+@article{Kauko2010,
+abstract = {We have determined the optimal placement of individual transmembrane helices in the Pyrococcus horikoshii Glt(Ph) glutamate transporter homolog in the membrane. The results are in close agreement with theoretical predictions based on hydrophobicity, but do not, in general, match the known three-dimensional structure, suggesting that transmembrane helices can be repositioned relative to the membrane during folding and oligomerization. Theoretical analysis of a database of membrane protein structures provides additional support for this idea. These observations raise new challenges for the structure prediction of membrane proteins and suggest that the classical two-stage model often used to describe membrane protein folding needs to be modified.},
+author = {Kauko, Anni and Hedin, Linnea E and Thebaud, Estelle and Cristobal, Susana and Elofsson, Arne and von Heijne, Gunnar},
+doi = {10.1016/j.jmb.2010.01.042},
+issn = {1089-8638},
+journal = {Journal of molecular biology},
+month = {mar},
+number = {1},
+pages = {190--201},
+pmid = {20109468},
+title = {{Repositioning of transmembrane alpha-helices during membrane protein folding.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/20109468},
+volume = {397},
+year = {2010}
+}
+
+
 @article{Bowie1997,
 abstract = {A survey of 45 transmembrane (TM) helices and 88 helix packing interactions in three independent transmembrane protein structures reveals the following features. (1) Helix lengths range from 14 to 36 residues with an average length of 26.4 residues. There is a preference for lengths greater than 20 residues. (2) The helices are tilted with respect to the bilayer normal by an average of 21°, but there is a decided preference for smaller tilt angles. (3) The distribution of helix packing angles is very different than for soluble proteins. The most common packing angles for TM helices are centered around +20° while for soluble proteins packing angles of around −35° are the most prevalent. (4) The average distance of closest approach is 9.6 {\AA}, which is the same as soluble proteins. (5) There is no preference for the positioning of the point of closest approach along the length of the helices. (6) It is almost a rule that TM helices pack against neighbors in the sequence. Of the 37 helices that have a sequence neighbor, 36 of them are in significant contact with a neighbor. (7) An antiparallel orientation is more prevalent than a parallel orientation and antiparallel interactions are more intimate on average. The general features of helix bundle membrane protein architecture described in this survey should prove useful in the modeling of helix bundle transmembrane proteins.},
 author = {Bowie, James U},
