--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -11,16 +11,22 @@ The work presented in this chapter is an expanded version of published work~\cit
 
 \section{Summary}
 As the idea of positive residues inside the cytoplasm emerged during the late 1980s, so did the idea of negative residues working in concert with \gls{tmh} orientation. It was shown that removing a single lysine residue reversed the topology of a model {\it Escherichia coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}. One would also expect to see a skew in negatively charged distribution if a cooperation between oppositely charged residues orientated a \gls{tmh}, however there is no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}. However, in {\it E. coli} negative residues do experience electrical pulling forces when traveling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
-
 \section{Methods}
 
 \subsection{Normalisation}
 
-$c_r=\frac{(a_{K,r}+a_{R,r})-(a_{D,r}+a_{E,r})}{N}$
+\begin{equation}
+c_r=\frac{(a_{K,r}+a_{R,r})-(a_{D,r}+a_{E,r})}{N}
+\end{equation}
 
-$p_{i,r}=\frac{a_{i,r}}{\underset{r}{\max}{(a_r)}}$
 
-$q_{i,r}=\frac{100·a_{i,r}}{a_i}$
+\begin{equation}
+p_{i,r}=\frac{a_{i,r}}{\underset{r}{\max}{(a_r)}}
+\end{equation}
+
+\begin{equation}
+q_{i,r}=\frac{100·a_{i,r}}{a_i}
+\end{equation}
 
 \section{Results}
 \subsection{Biophysicochemical differences in multi-pass and single-pass helices}
