--- a/thesis.tex
+++ b/thesis.tex
@@ -46,7 +46,7 @@
 
 \title{Investigating the Recognition and Interactions of Non-Polar $\alpha$ Helices in Biology}
 \author{James Alexander Baker}
-\faculty{Life Sciences}
+\faculty{Chemistry}
 \def\wordcount{8496}
 % Uncomment the line below to suppress the `List of Tables' page (optional)
 \tablespagefalse
