--- a/chapter_predictfunction.tex
+++ b/chapter_predictfunction.tex
@@ -1,5 +1,5 @@
 
-\chapter{The Anchors And The Doers} %Perhaps this will be for a later date!
+\chapter{Protein Classification Based on Intra-membrane Complexity Arrangement} %Perhaps this will be for a later date!
 \section{Abstract}
 \section{Introduction}
 \section{Methods}
