--- a/thesis.tex
+++ b/thesis.tex
@@ -40,30 +40,28 @@
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{sp}{SP}{Signal Peptide}
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
-\makeglossaries
+\makeglossaries{}
 \begin{document}
-
 
 \title{Investigating the Recognition and Interactions of Non-Polar $\alpha$ Helices in Biology}
 \author{James Alexander Baker}
 \faculty{Chemistry}
 \def\wordcount{8496}
 % Uncomment the line below to suppress the `List of Tables' page (optional)
-\tablespagefalse
+\tablespagefalse{}
 
 % Uncomment the line below to suppress the `List of Figures' page (optional)
-\figurespagefalse
-
+\figurespagefalse{}
 % Uncomment the line below to use a customised Declaration statement
 %\def\declaration{All the work in this thesis has been sourced from Google}
 
 
-\beforeabstract % Don't move the abstract, it doesn't like it.
+\beforeabstract{} % Don't move the abstract, it doesn't like it.
 Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane $\alpha$ helix containing proteins make up around a quarter of all proteins, as well as two thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently it is known that the properties of trans-membrane protein $\alpha$ helices underpin membrane protein insertion mechanisms.
 
 By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterizing features of $\alpha$ helices en masse, particularly regarding their topology, membrane\---protein interactions, and intra-membrane protein interactions.
 
-\afterabstract
+\afterabstract{}
 
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
@@ -94,7 +92,7 @@ Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNAR
 \clearpage
 
 
-\afterpreface
+\afterpreface{}
 
 \section*{List of Abbreviations}
 %Stick to alphabetical order
