tweaks, xbar moved for sure this time

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -154,8 +154,8 @@ One problem in a biological membranes is that the compartments always  involve m
 \begin{equation}
 {{E}_{m}}=\frac{RT}{F} \times{\ln}
   \left(\frac{
-    {p}_{K^+}.{[K^+]}_{out} + {p}_{Na^+}.{[Na^+]}_{out} + {p}_{Cl^-}.{[Cl^-]}_{in}}
-    {{p}_{K^+}.{[K^+]}_{in} + {p}_{Na^+}.{[Na^+]}_{in} + {p}_{Cl^-}.{[Cl^-]}_{out}
+    {p}_{K^+}\cdot{[K^+]}_{out} + {p}_{Na^+}\cdot{[Na^+]}_{out} + {p}_{Cl^-}\cdot{[Cl^-]}_{in}}
+    {{p}_{K^+}\cdot{[K^+]}_{in} + {p}_{Na^+}\cdot{[Na^+]}_{in} + {p}_{Cl^-}\cdot{[Cl^-]}_{out}
     }\right)
 \end{equation}
 
