--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -21,11 +21,11 @@ c_r=\frac{(a_{K,r}+a_{R,r})-(a_{D,r}+a_{E,r})}{N}
 
 
 \begin{equation}
-p_{i,r}=\frac{a_{i,r}}{\underset{r}{\max}{(a_r)}}
+  p_{i,r}=\frac{a_{i,r}}{\underset{r}{\max}{(a_r)}}
 \end{equation}
 
 \begin{equation}
-q_{i,r}=\frac{100·a_{i,r}}{a_i}
+  q_{i,r}=\frac{{100}\cdot{a_{i,r}}}{a_i}
 \end{equation}
 
 \section{Results}
