--- a/thesis.tex
+++ b/thesis.tex
@@ -45,6 +45,7 @@
 
 \title{Investigating the Recognition and Interactions of Non-Polar $\alpha$ Helices in Biology}
 \author{James Alexander Baker}
+\orcid{orcid.org/0000--0003--0874--2298}
 \faculty{Chemistry}
 \def\wordcount{8496}
 % Uncomment the line below to suppress the `List of Tables' page (optional)
