--- a/thesis.tex
+++ b/thesis.tex
@@ -11,22 +11,18 @@
 \usepackage[backend=bibtex,style=nature,citestyle=nature]{biblatex} %science, nature, alphabetic are common choices.
 %FYI
 
-
 % Citations styles = https://www.sharelatex.com/learn/Biblatex_citation_styles
 % Bibliography styles = https://www.sharelatex.com/learn/Biblatex_bibliography_styles
-
 
 \usepackage{graphicx} %use [!ht] (which means ignore sensible protocols and place here) not [h] (which means place here-ish) for figures otherwise they end up at the end of the chapter.
 \usepackage{amsmath}
 \usepackage{csquotes}
 \usepackage{longtable}
-\usepackage[acronym]{glossaries} %Whilst it's tempting, I've found tinkering with glossary structure and style is a nightmare. Avoid at all costs.
-\addbibresource{references.bib} % This is the folder containing all your "bibtex" references. All reference managers can export to this format.
+\usepackage[acronym]{glossaries} %Whilst it's tempting, I've found tinkering with glossary structure and style is a nightmare.
+\addbibresource{references.bib} % This is the file containing all your bibtex references. All reference managers can export to this format.
 \graphicspath{{images/}} %Store all your figures here
 
-% abbreviations: The first option in the curly braces is the code used in the text, second is the short form, and third is the long form. http://tex.stackexchange.com/questions/86666/how-to-create-both-list-of-abbreviations-and-list-of-nomenclature-using-nomencl
-
-% abbreviations: 1.the code used in the text, 2. the short form, 3. the long form. http://tex.stackexchange.com/questions/86666/how-to-create-both-list-of-abbreviations-and-list-of-nomenclature-using-nomencl
+% Example abbreviation: {the code used in the text} {the short form} {the long form}. For help on introducing nomenclature, see the sharelatex help page. http://tex.stackexchange.com/questions/86666/how-to-create-both-list-of-abbreviations-and-list-of-nomenclature-using-nomencl
 \newacronym{pm}{PM}{Plasma Membrane}
 \newacronym{md}{MD}{Molecular Dynamics}
 \newacronym{tm}{TM}{Trans-membrane}
@@ -41,6 +37,7 @@
 \newacronym{sp}{SP}{Signal Peptide}
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
 \makeglossaries{}
+
 \begin{document}
 
 \title{Investigating the Recognition and Interactions of Non-Polar $\alpha$ Helices in Biology}
@@ -63,7 +60,6 @@ Non\---polar helices figure prominently in structural biology, from the first pr
 By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterizing features of $\alpha$ helices en masse, particularly regarding their topology, membrane\---protein interactions, and intra-membrane protein interactions.
 
 \afterabstract{}
-
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
@@ -111,14 +107,13 @@ Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNAR
 \acrfull{tms} \\
 
 
-%This is where we call the chapters. No need to include ".tex" The chapters will be printed to the document in this order.
+%This is where we call the chapters. No need to include ".tex". The chapters will be printed to the document in this order. To create a new chapter, make a new file, and add the name of the file below (without the file extension).
 \input{chapter_introduction}
 \input{chapter_tmcomposition}
 \input{chapter_tailanchor}
 \input{chapter_predictfunction}
 \input{chapter_conclusions}
 
-% This would be better at the beginning so that before we get started, let's print the glossaries.
 % In order for this to work a special build sequence is needed. http://tex.stackexchange.com/a/46732/42423
 
 %This line prints the bibliography ;)
@@ -130,6 +125,5 @@ Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNAR
 %\appendix
 %\chapter{}
 %.........
-
 
 \end{document}
